# ingren-llm-email-api

./: .gitignore  DEPLOYMENT.md  deploy.sh  lambda_handler.py  pyproject.toml  requirements.txt
infrastructure/: Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  branch.py
prompts/: system_prompt.txt  user_prompt_template.txt
src/: config.py  main.py
src/api/: models.py  routes.py
src/services/: company_info_service.py  email_generator.py
src/utils/: langsmith_prompt_manager.py  prompt_loader.py
tests/: prompts.py  test_api.py
