[tool.poetry]
name = "ingren-llm-email-api"
version = "0.1.0"
description = "API for generating personalized emails using LLMs"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
openai = "^1.10.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
httpx = "^0.28.1"
mangum = "^0.17.0"
boto3 = "^1.38.13"
pulumi = "^3.169.0"
pulumi-aws = "^6.80.0"
langsmith = "^0.3.42"
langchain-core = "^0.3.59"
langchain-openai = "^0.3.16"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
black = "^23.10.0"
isort = "^5.12.0"
mypy = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
