[project]
name = "ingren-llm-email-api"
version = "0.1.0"
description = "API for generating personalized emails using LLMs"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.12,<0.116",
    "uvicorn>=0.34.0,<0.35",
    "openai>=1.10.0,<2",
    "pydantic>=2.5.0,<3",
    "pydantic-settings>=2.1.0,<3",
    "httpx>=0.28.1,<0.29",
    "mangum>=0.17.0,<0.18",
    "boto3>=1.38.13,<2",
    "pulumi>=3.169.0,<4",
    "pulumi-aws>=6.80.0,<7",
    "langsmith>=0.3.42,<0.4",
    "langchain-core>=0.3.59,<0.4",
    "langchain-openai>=0.3.16,<0.4",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0,<8",
    "pytest-asyncio>=0.21.1,<0.22",
    "black>=23.10.0,<24",
    "isort>=5.12.0,<6",
    "mypy>=1.6.1,<2",
]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
